[tool.poetry]
name = "fastapimongo"
version = "0.1.0"
description = ""
authors = ["None"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.73.0"
mongoengine = "^0.23.1"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"
black = "^22.1.0"
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
